# CloudOps

./: .gitignore  404.html  CHANGELOG.md  Dockerfile  LICENSE  README.docs.md  README.md  Taskfile.yaml  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt
.devcontainer/: .trivyignore  Dockerfile  devcontainer.json
.github/workflows/: CI.MkDocs.yml  build.yml  publish.yml  test.yml
docs/: index.md
docs/cloudops/: guides.md
docs/runbooks/: reference.md
getting-started/: index.html
notebooks/: diagram-as-code.ipynb
runbooks/explanation/: index.html
runbooks/guides/: index.html
runbooks/reference/: index.html
runbooks/tutorials/: index.html
src/: conftest.py  main.py
src/cloudops/: __init__.py  toolkit.py
src/runbooks/: __init__.py  calculator.py  config.py  exceptions.py  toolkit.py  utils.py
tests/: test_calculator.py  test_toolkit.py  test_utils.py
