[project]
## https://docs.astral.sh/uv/concepts/projects/config/
name = "runbooks"
version = "0.1.3"  # Incremented for new release
description = "CloudOps Automation Toolkit for DevOps and SRE teams."
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}

authors = [
    {name = "runbooks maintainers", email = "nnthanh101@gmail.com"},
]

keywords = ["runbooks", "automation", "DevOps", "SRE", "CloudOps"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

dependencies = [
    "requests>=2.32.3",
    "loguru>=0.7.3",
    "typer>=0.15.1",
    "tqdm>=4.67.1",
    "uv>=0.1.38"
]

[dependency-groups]
dev = [
    "pytest>=8.3.4", 
    "ruff>=0.8.4",
    "pytest-cov>=6.0.0",
    "black>=23.11.0",
    "pre-commit>=3.5.0",
    "boto3>=1.35.90",
    "moto>=5.0.25",
    "versioningit"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# license-files = []
package-dir = {"" = "src"}  # Use 'src' as root
packages = ["runbooks"]
license-files = ["LICENSE"]

[tool.versioningit]
vcs = "git"
tag2version = "v{base}"
default-version = "0.1.5"

[tool.pytest.ini_options]
## Test Configuration
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "--cov=src/runbooks --cov-report=term-missing --verbose"

[project.scripts]
## CLI Commands
runbooks = "runbooks.runbooks:main"

[tool.ruff]
## Linting and Formatting Configurations
## https://docs.astral.sh/ruff/configuration/
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I"]
ignore = ["F401", "E501", "F811"] 
fixable = ["I"]
unfixable = []

[tool.ruff.format]
line-ending = "lf"
